@@ -1,11 +1,11 @@
 chr:position:chr:position	Genotype[basen0]	Genotype[basen1]	Genotype[basen2]	Genotype[basen3]	Genotype[basen4]	Genotype[basen5]	Genotype[basen6]	Genotype[basen7]	Genotype[basen8]	Genotype[basen9]	Zygosity[basen0]	Zygosity[basen1]	Zygosity[basen2]	Zygosity[basen3]	Zygosity[basen4]	Zygosity[basen5]	Zygosity[basen6]	Zygosity[basen7]	Zygosity[basen8]	Zygosity[basen9]
-target1:126:target1:126	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous
-target1:127:target1:127	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous
-target1:128:target1:128	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous
-target1:129:target1:129	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous
-target1:130:target1:130	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous
-target1:131:target1:131	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous
-target1:132:target1:132	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous
-target1:133:target1:133	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous
-target1:134:target1:134	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous
-target1:135:target1:135	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous	Heterozygous
+target1:126:target1:126	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous
+target1:127:target1:127	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous
+target1:128:target1:128	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous
+target1:129:target1:129	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous
+target1:130:target1:130	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous
+target1:131:target1:131	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous
+target1:132:target1:132	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous
+target1:133:target1:133	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous
+target1:134:target1:134	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous
+target1:135:target1:135	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	A/G	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous	heterozygous
